welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: Missing closing brace `}' assumed here
override def run() {reproMotif()}
^Array1:2: error: expected start of definition
override def run() {reproMotif()}
         ^Array1:6: error: expected class or object definition
def reproMotif(){
^Array1:17: error: expected class or object definition
def Motif(){
^